...
        configurations: ModelConfiguration(isStoredInMemoryOnly: true)
    ) else {
        return nil
    }
    let context = container.mainContext

    let contacts = [
        Contact(name: "张伯伯", relation: "父亲的长兄", circle: 2),
        Contact(name: "李阿姨", relation: "母亲的表妹", circle: 2),
        Contact(name: "王小弟", relation: "堂弟", circle: 2),
        Contact(name: "陈奶奶", relation: "外祖母", circle: 2),
    ]
    contacts.forEach { context.insert($0) }
...
