...
    },
    "common.delete" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "删除"
          }
        }
      }
    },
    "common.edit" : {
      "localizations" : {
...
    },
    "contact.list.title" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "人脉"
          }
        }
      }
    },
    "Corner Radius: 20pt" : {

...
